didius/check_output.txt
   Compiling didius v0.1.0 (/home/jongkook90/antigravity/ui/didius)
error[E0433]: failed to resolve: use of undeclared type `OrderType`
   --> src/oms/engine.rs:141:53
    |
141 |             if price.is_none() { order.order_type = OrderType::MARKET; }
    |                                                     ^^^^^^^^^ use of undeclared type `OrderType`
    |
help: an enum with a similar name exists
    |
141 -             if price.is_none() { order.order_type = OrderType::MARKET; }
141 +             if price.is_none() { order.order_type = OrderSide::MARKET; }
    |
help: consider importing this enum
    |
  1 + use crate::oms::order::OrderType;
    |

error[E0433]: failed to resolve: use of undeclared type `OrderType`
   --> src/oms/engine.rs:145:39
    |
145 |             else { order.order_type = OrderType::LIMIT; }
    |                                       ^^^^^^^^^ use of undeclared type `OrderType`
    |
help: an enum with a similar name exists
    |
145 -             else { order.order_type = OrderType::LIMIT; }
145 +             else { order.order_type = OrderSide::LIMIT; }
    |
help: consider importing this enum
    |
  1 + use crate::oms::order::OrderType;
    |

error[E0412]: cannot find type `Decimal` in this scope
  --> src/adapter/mock.rs:58:60
   |
58 |     fn modify_order(&self, _order_id: &str, _price: Option<Decimal>, _qty: Option<i64>) -> Result<bool> {
   |                                                            ^^^^^^^ not found in this scope
   |
help: consider importing one of these structs
   |
 1 + use crate::adapter::Decimal;
   |
 1 + use rust_decimal::Decimal;
   |

warning: unused imports: `ExecutionStrategy` and `OrderType`
 --> src/strategy/limit.rs:1:55
  |
1 | use crate::oms::order::{Order, OrderState, OrderSide, OrderType, ExecutionStrategy};
  |                                                       ^^^^^^^^^  ^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `ExecutionStrategy` and `OrderType`
 --> src/strategy/stop.rs:1:43
  |
1 | use crate::oms::order::{Order, OrderSide, OrderType, OrderState, ExecutionStrategy};
  |                                           ^^^^^^^^^              ^^^^^^^^^^^^^^^^^

warning: use of deprecated function `aws_config::from_env`: Use the `aws_config::defaults` function. If you don't care about future default behavior changes, you can continue to use this function by enabling the `behavior-version-latest` feature. Doing so will make this deprecation notice go away.
  --> src/logger/aws.rs:32:30
   |
32 |     let config = aws_config::from_env()
   |                              ^^^^^^^^
   |
   = note: `#[warn(deprecated)]` on by default

warning: use of deprecated method `pyo3::IntoPy::into_py`: `IntoPy` is going to be replaced by `IntoPyObject`. See the migration guide (https://pyo3.rs/v0.23.0/migration) for more information.
  --> src/adapter/interface.rs:89:32
   |
89 |         Value::Bool(b) => Ok(b.into_py(py)),
   |                                ^^^^^^^

warning: use of deprecated method `pyo3::IntoPy::into_py`: `IntoPy` is going to be replaced by `IntoPyObject`. See the migration guide (https://pyo3.rs/v0.23.0/migration) for more information.
  --> src/adapter/interface.rs:92:22
   |
92 |                 Ok(i.into_py(py))
   |                      ^^^^^^^

warning: use of deprecated method `pyo3::IntoPy::into_py`: `IntoPy` is going to be replaced by `IntoPyObject`. See the migration guide (https://pyo3.rs/v0.23.0/migration) for more information.
  --> src/adapter/interface.rs:94:22
   |
94 |                 Ok(f.into_py(py))
   |                      ^^^^^^^

warning: use of deprecated method `pyo3::IntoPy::into_py`: `IntoPy` is going to be replaced by `IntoPyObject`. See the migration guide (https://pyo3.rs/v0.23.0/migration) for more information.
  --> src/adapter/interface.rs:99:34
   |
99 |         Value::String(s) => Ok(s.into_py(py)),
   |                                  ^^^^^^^

warning: unused variable: `info`
   --> src/adapter/hantoo.rs:500:46
    |
500 |                      if let Some((client_id, info)) = map.iter().find(|(_, info)| info.order_no == order_no) {
    |                                              ^^^^ help: if this is intentional, prefix it with an underscore: `_info`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: value assigned to `source` is never read
   --> src/adapter/hantoo_ngt_futopt.rs:605:13
    |
605 |             source = data["output2"].as_object();
    |             ^^^^^^
    |
    = help: maybe it is overwritten before being read?
    = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `order`
  --> src/strategy/base.rs:18:42
   |
18 |     fn on_order_status_update(&mut self, order: &Order) -> Result<StrategyAction> {
   |                                          ^^^^^ help: if this is intentional, prefix it with an underscore: `_order`

warning: unused variable: `part2_start_index`
  --> src/utils/universe.rs:65:13
   |
65 |         let part2_start_index = len - 228;
   |             ^^^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_part2_start_index`

Some errors have detailed explanations: E0412, E0433.
For more information about an error, try `rustc --explain E0412`.
warning: `didius` (lib) generated 11 warnings
error: could not compile `didius` (lib) due to 3 previous errors; 11 warnings emitted
